# Sosia

./: .gitignore  LICENSE  README.md  pyproject.toml
esempi/: clienti.csv  clienti_mondo.csv
examples/: customers.csv  world_customers.csv
sosia/: __init__.py  __main__.py  dedupe.py  lsh.py  minhash.py  similarity.py
tests/: test_sosia.py
