[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sosia"
version = "1.0.0"
description = "Trova i sosia nei tuoi dati: fuzzy matching e deduplica multilingua con MinHash + LSH, zero dipendenze"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["deduplication", "fuzzy-matching", "minhash", "lsh", "record-linkage", "levenshtein"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Italian",
]

[project.urls]
Repository = "https://github.com/gerefloc45/Sosia"

[tool.setuptools]
packages = ["sosia"]
